--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .App {
+  background-color: #0e71e6;
+  background: linear-gradient(90deg, #0a50a1 0%, #bd1682 50%, #af2d52 100%);
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -13,20 +21,18 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2 {
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header {
+
+  font-size: calc(10px + 2vmin);
+  color: white;
+  text-decoration: none;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +41,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+p {
+  color: azure;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+#paragraph {
+  width:40%;
+}
+
+code {
+  color:white;
+  background-color: rgb(32, 32, 32, .6);
+  padding:4px;
+  border-radius: 4px;
+  font-family: monospace;
+  opacity: 1;
 }
